crates/aiy/tests/snapshots/shell_tests__with_network__source_verification_deprecation__both_flags.sh.snap
---
source: crates/aiy/tests/shell_tests.rs
description: tests/shell_tests/with_network/source_verification_deprecation/both_flags.sh
---
----- script -----
# Copyright (c) Mysten Labs, Inc.
# SPDX-License-Identifier: Apache-2.0

# test that we get an error if we supply both `--skip-dependency-verification` and `--verify-deps`

echo "=== publish (should fail) ===" | tee /dev/stderr
aiy client --client.config $CONFIG publish example --skip-dependency-verification --verify-deps

echo "=== upgrade (should fail) ===" | tee /dev/stderr
aiy client --client.config $CONFIG upgrade example --upgrade-capability 0x1234 --skip-dependency-verification --verify-deps

----- results -----
success: false
exit_code: 2
----- stdout -----
=== publish (should fail) ===
=== upgrade (should fail) ===

----- stderr -----
=== publish (should fail) ===
error: the argument '--skip-dependency-verification' cannot be used with '--verify-deps'

Usage: aiy client publish --skip-dependency-verification <package_path>

For more information, try '--help'.
=== upgrade (should fail) ===
error: the argument '--skip-dependency-verification' cannot be used with '--verify-deps'

Usage: aiy client upgrade --upgrade-capability <UPGRADE_CAPABILITY> --skip-dependency-verification <package_path>

For more information, try '--help'.
