crates/aiy/tests/snapshots/shell_tests__with_network__source_verification_deprecation__skip_dep_verif.sh.snap
---
source: crates/aiy/tests/shell_tests.rs
description: tests/shell_tests/with_network/source_verification_deprecation/skip_dep_verif.sh
---
----- script -----
# Copyright (c) Mysten Labs, Inc.
# SPDX-License-Identifier: Apache-2.0

# check that --skip-dependency-verification has the right behavior on publish and upgrade

echo "=== munge Move.toml files ===" | tee /dev/stderr
FRAMEWORK_DIR=$(echo $CARGO_MANIFEST_DIR | sed 's#/crates/aiy#/crates/aiy-framework/packages/aiy-framework#g')
for i in dependency/Move.toml example/Move.toml
do
  cat $i | sed "s#FRAMEWORK_DIR#$FRAMEWORK_DIR#g" > Move.toml \
    && mv Move.toml $i
done

echo "=== publish dependency (should warn about deprecation) ===" | tee /dev/stderr
aiy client --client.config $CONFIG publish "dependency" --skip-dependency-verification \
  --json | jq '.effects.status'

echo "=== publish package v0 (should warn about deprecation) ===" | tee /dev/stderr
UPGRADE_CAP=$(aiy client --client.config $CONFIG publish "example" --skip-dependency-verification \
  --json | jq -r '.objectChanges[] | select(.objectType == "0x2::package::UpgradeCap") | .objectId')

echo "=== upgrade package (should warn about deprecation) ===" | tee /dev/stderr
aiy client --client.config $CONFIG upgrade --upgrade-capability $UPGRADE_CAP example --skip-dependency-verification \
  --json | jq '.effects.status'

echo "=== modify dependency ===" | tee /dev/stderr
cat dependency/sources/dependency.move | sed 's#0#1#g' > dependency.move
mv dependency.move dependency/sources/dependency.move

echo "=== try to publish with modified dep (should succeed) ===" | tee /dev/stderr
UPGRADE_CAP=$(aiy client --client.config $CONFIG publish "example" --skip-dependency-verification \
  --json | jq -r '.objectChanges[] | select(.objectType == "0x2::package::UpgradeCap") | .objectId')

echo "=== try to upgrade with modified dep (should succeed) ===" | tee /dev/stderr
aiy client --client.config $CONFIG upgrade --upgrade-capability $UPGRADE_CAP example --skip-dependency-verification \
  --json | jq '.effects.status'

----- results -----
success: true
exit_code: 0
----- stdout -----
=== munge Move.toml files ===
=== publish dependency (should warn about deprecation) ===
{
  "status": "success"
}
=== publish package v0 (should warn about deprecation) ===
=== upgrade package (should warn about deprecation) ===
{
  "status": "success"
}
=== modify dependency ===
=== try to publish with modified dep (should succeed) ===
=== try to upgrade with modified dep (should succeed) ===
{
  "status": "success"
}

----- stderr -----
=== munge Move.toml files ===
=== publish dependency (should warn about deprecation) ===
[Warning]: Dependency sources are no longer verified automatically during publication and upgrade, so the `--skip-dependency-verification` flag is no longer necessary.
[note] Dependencies on Bridge, MoveStdlib, Aiy, and AiySystem are automatically added, but this feature is disabled for your package because you have explicitly included dependencies on Aiy. Consider removing these dependencies from Move.toml.
INCLUDING DEPENDENCY Aiy
INCLUDING DEPENDENCY MoveStdlib
BUILDING dependency
Skipping dependency verification
=== publish package v0 (should warn about deprecation) ===
[Warning]: Dependency sources are no longer verified automatically during publication and upgrade, so the `--skip-dependency-verification` flag is no longer necessary.
[note] Dependencies on Bridge, MoveStdlib, Aiy, and AiySystem are automatically added, but this feature is disabled for your package because you have explicitly included dependencies on Aiy. Consider removing these dependencies from Move.toml.
INCLUDING DEPENDENCY dependency
INCLUDING DEPENDENCY Aiy
INCLUDING DEPENDENCY MoveStdlib
BUILDING example
Skipping dependency verification
=== upgrade package (should warn about deprecation) ===
[Warning]: Dependency sources are no longer verified automatically during publication and upgrade, so the `--skip-dependency-verification` flag is no longer necessary.
[note] Dependencies on Bridge, MoveStdlib, Aiy, and AiySystem are automatically added, but this feature is disabled for your package because you have explicitly included dependencies on Aiy. Consider removing these dependencies from Move.toml.
INCLUDING DEPENDENCY dependency
INCLUDING DEPENDENCY Aiy
INCLUDING DEPENDENCY MoveStdlib
BUILDING example
Skipping dependency verification
=== modify dependency ===
=== try to publish with modified dep (should succeed) ===
[Warning]: Dependency sources are no longer verified automatically during publication and upgrade, so the `--skip-dependency-verification` flag is no longer necessary.
[note] Dependencies on Bridge, MoveStdlib, Aiy, and AiySystem are automatically added, but this feature is disabled for your package because you have explicitly included dependencies on Aiy. Consider removing these dependencies from Move.toml.
INCLUDING DEPENDENCY dependency
INCLUDING DEPENDENCY Aiy
INCLUDING DEPENDENCY MoveStdlib
BUILDING example
Skipping dependency verification
=== try to upgrade with modified dep (should succeed) ===
[Warning]: Dependency sources are no longer verified automatically during publication and upgrade, so the `--skip-dependency-verification` flag is no longer necessary.
[note] Dependencies on Bridge, MoveStdlib, Aiy, and AiySystem are automatically added, but this feature is disabled for your package because you have explicitly included dependencies on Aiy. Consider removing these dependencies from Move.toml.
INCLUDING DEPENDENCY dependency
INCLUDING DEPENDENCY Aiy
INCLUDING DEPENDENCY MoveStdlib
BUILDING example
Skipping dependency verification
