crates/aiy/tests/snapshots/shell_tests__with_network__source_verification_deprecation__with_dep_verif.sh.snap
---
source: crates/aiy/tests/shell_tests.rs
description: tests/shell_tests/with_network/source_verification_deprecation/with_dep_verif.sh
---
----- script -----
# Copyright (c) Mysten Labs, Inc.
# SPDX-License-Identifier: Apache-2.0

# check that --verify-deps has the right behavior on publish and upgrade

echo "=== munge Move.toml files ===" | tee /dev/stderr
FRAMEWORK_DIR=$(echo $CARGO_MANIFEST_DIR | sed 's#/crates/aiy#/crates/aiy-framework/packages/aiy-framework#g')
for i in dependency/Move.toml example/Move.toml
do
  cat $i | sed "s#FRAMEWORK_DIR#$FRAMEWORK_DIR#g" > Move.toml \
    && mv Move.toml $i
done

echo "=== publish dependency ===" | tee /dev/stderr
aiy client --client.config $CONFIG publish "dependency" --verify-deps \
  --json | jq '.effects.status'

echo "=== publish package v0 (should NOT warn) ===" | tee /dev/stderr
UPGRADE_CAP=$(aiy client --client.config $CONFIG publish "example" --verify-deps \
  --json | jq -r '.objectChanges[] | select(.objectType == "0x2::package::UpgradeCap") | .objectId')

echo "=== upgrade package (should NOT warn) ===" | tee /dev/stderr
aiy client --client.config $CONFIG upgrade --upgrade-capability $UPGRADE_CAP example --verify-deps \
  --json | jq '.effects.status'

echo "=== modify dependency ===" | tee /dev/stderr
cat dependency/sources/dependency.move | sed 's#0#1#g' > dependency.move
mv dependency.move dependency/sources/dependency.move

echo "=== try to publish with modified dep (should fail) ===" | tee /dev/stderr
aiy client --client.config $CONFIG publish "example" --verify-deps \
  | sed 's/at .*::dependency::dependency/at [[package address]]::dependency::dependency/g'

echo "=== try to upgrade with modified dep (should fail) ===" | tee /dev/stderr
aiy client --client.config $CONFIG upgrade --upgrade-capability $UPGRADE_CAP example --verify-deps \
  | sed 's/at .*::dependency::dependency/at [[package address]]::dependency::dependency/g'

----- results -----
success: true
exit_code: 0
----- stdout -----
=== munge Move.toml files ===
=== publish dependency ===
{
  "status": "success"
}
=== publish package v0 (should NOT warn) ===
=== upgrade package (should NOT warn) ===
{
  "status": "success"
}
=== modify dependency ===
=== try to publish with modified dep (should fail) ===
Failed to publish the Move module(s), reason: [warning] Local dependency did not match its on-chain version at [[package address]]::dependency::dependency

This may indicate that the on-chain version(s) of your package's dependencies may behave differently than the source version(s) your package was built against.

Fix this by rebuilding your packages with source versions matching on-chain versions of dependencies, or ignore this warning by re-running with the --skip-dependency-verification flag.
=== try to upgrade with modified dep (should fail) ===
Failed to publish the Move module(s), reason: [warning] Local dependency did not match its on-chain version at [[package address]]::dependency::dependency

This may indicate that the on-chain version(s) of your package's dependencies may behave differently than the source version(s) your package was built against.

Fix this by rebuilding your packages with source versions matching on-chain versions of dependencies, or ignore this warning by re-running with the --skip-dependency-verification flag.

----- stderr -----
=== munge Move.toml files ===
=== publish dependency ===
[note] Dependencies on Bridge, MoveStdlib, Aiy, and AiySystem are automatically added, but this feature is disabled for your package because you have explicitly included dependencies on Aiy. Consider removing these dependencies from Move.toml.
INCLUDING DEPENDENCY Aiy
INCLUDING DEPENDENCY MoveStdlib
BUILDING dependency
Successfully verified dependencies on-chain against source.
=== publish package v0 (should NOT warn) ===
[note] Dependencies on Bridge, MoveStdlib, Aiy, and AiySystem are automatically added, but this feature is disabled for your package because you have explicitly included dependencies on Aiy. Consider removing these dependencies from Move.toml.
INCLUDING DEPENDENCY dependency
INCLUDING DEPENDENCY Aiy
INCLUDING DEPENDENCY MoveStdlib
BUILDING example
Successfully verified dependencies on-chain against source.
=== upgrade package (should NOT warn) ===
[note] Dependencies on Bridge, MoveStdlib, Aiy, and AiySystem are automatically added, but this feature is disabled for your package because you have explicitly included dependencies on Aiy. Consider removing these dependencies from Move.toml.
INCLUDING DEPENDENCY dependency
INCLUDING DEPENDENCY Aiy
INCLUDING DEPENDENCY MoveStdlib
BUILDING example
Successfully verified dependencies on-chain against source.
=== modify dependency ===
=== try to publish with modified dep (should fail) ===
[note] Dependencies on Bridge, MoveStdlib, Aiy, and AiySystem are automatically added, but this feature is disabled for your package because you have explicitly included dependencies on Aiy. Consider removing these dependencies from Move.toml.
INCLUDING DEPENDENCY dependency
INCLUDING DEPENDENCY Aiy
INCLUDING DEPENDENCY MoveStdlib
BUILDING example
=== try to upgrade with modified dep (should fail) ===
[note] Dependencies on Bridge, MoveStdlib, Aiy, and AiySystem are automatically added, but this feature is disabled for your package because you have explicitly included dependencies on Aiy. Consider removing these dependencies from Move.toml.
INCLUDING DEPENDENCY dependency
INCLUDING DEPENDENCY Aiy
INCLUDING DEPENDENCY MoveStdlib
BUILDING example
